--- a/.github/workflows/build-image-release.yml
+++ b/.github/workflows/build-image-release.yml
@@ -69,6 +69,24 @@ jobs:
           set -euo pipefail
           sudo bash ./build.bash "${{ steps.vars.outputs.image_name }}" "${{ steps.vars.outputs.image_tag }}" "${{ steps.vars.outputs.commit_short }}"
 
+      - name: Move archive to uploadable path
+        shell: bash
+        run: |
+          set -euo pipefail
+          FILE_NAME="${{ steps.vars.outputs.output_filename }}"
+          SRC_FILE="/root/image/${FILE_NAME}"
+          DEST_DIR="${HOME}/image"
+          DEST_FILE="${DEST_DIR}/${FILE_NAME}"
+
+          if [[ ! -f "$SRC_FILE" ]]; then
+            echo "Expected file not found: $SRC_FILE"
+            exit 1
+          fi
+
+          mkdir -p "$DEST_DIR"
+          sudo install -m 0644 -o "$(id -u)" -g "$(id -g)" "$SRC_FILE" "$DEST_FILE"
+          ls -l "$DEST_FILE"
+
       - name: Ensure release exists
         env:
           GH_TOKEN: ${{ github.token }}
