feat(ci): support Docker Hub authentication for skopeo in release build
- Expose DOCKERHUB_USERNAME and DOCKERHUB_TOKEN in release workflow
- Preserve env vars when invoking build.bash with sudo
- Add conditional --creds handling for skopeo inspect/copy
- Fallback to anonymous access if secrets are unset

--- a/.github/workflows/build-image-release.yml
+++ b/.github/workflows/build-image-release.yml
@@ -65,14 +65,16 @@ jobs:
 
       - name: Build rootfs archive (skopeo + umoci via build.bash, root privilege)
         shell: bash
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
           set -euo pipefail
           mkdir -p dist
-          sudo bash ./build.bash \
+          sudo --preserve-env=DOCKERHUB_USERNAME,DOCKERHUB_TOKEN bash ./build.bash \
             '${{ steps.params.outputs.image_name }}' \
             '${{ steps.params.outputs.image_tag }}' \
             --output "dist/${{ steps.params.outputs.output_filename }}"
-
       - name: Upload archive to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
